[package]
name = "warp-websocket-test"
version = "0.1.0"
authors = ["apiraino <apiraino@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
warp = "0.2.2"
futures = "0.3.4"

# log = "0.4.8"
# flexi_logger = "0.15.2"

# mobc = "0.5"
# tokio-postgres = "0.5"
mobc-postgres = "0.5"
